<resources>
    <string name="google_client_id">sua-client-id</string>

    <string name="app_name">ACID - Cap 2</string>
    <string name="login_via_google">Login via Google</string>
    <string name="login_via_email">Login via Email</string>
    <string name="login_via_telefone">Login via Telefone</string>
    <string name="login_anonimo">Login Anonimo</string>
    <string name="login_via_personalizado">Login via Personalizado</string>
    <string name="hint_email_do_usuario">E-mail do usuário</string>
    <string name="hint_senha_do_usuario">Senha do usuário</string>
    <string name="criar">Criar</string>
    <string name="entrar">Entrar</string>

    <string name="hint_telefone_do_usuario">Telefone do usuário</string>
    <string name="hint_codigo_de_validacao_recebido">Código de validação recebido</string>
    <string name="criar_conta_do_usuario">Criar conta do usuário</string>
    <string name="hint_token_personalizado">Token personalizado</string>

</resources>