<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_login_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_via_google"
        app:layout_constraintBottom_toTopOf="@id/btn_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_via_email"
        app:layout_constraintBottom_toTopOf="@id/btn_login_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_google" />

    <Button
        android:id="@+id/btn_login_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_via_telefone"
        app:layout_constraintBottom_toTopOf="@id/btn_login_anon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_email" />

    <Button
        android:id="@+id/btn_login_anon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_anonimo"
        app:layout_constraintBottom_toTopOf="@id/btn_login_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_phone" />

    <Button
        android:id="@+id/btn_login_custom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_via_personalizado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_anon" />

</androidx.constraintlayout.widget.ConstraintLayout>